finally made docker!!!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=ivannikolaev
-spring.datasource.password=Apolo
+spring.datasource.username=${DATASOURCE_USERNAME:ivannikolaev}
+spring.datasource.password=${DATASOURCE_PASSWORD:Apolo}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/m_tech
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/m_tech}
 spring.jpa.generate-ddl=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
